@@ -1,3 +1,7 @@
+2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ButtonTest.cs: Added Panel, ToolBar tests.
+
 2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* StackPanelTest.cs: Added some ScrollViewer-related tests.
